# system-monitor

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: battery.rs  collector.rs  config.rs  cpu.rs  hwmon.rs  main.rs  thermal.rs  utils.rs  visualization.rs
