[package]
name = "system-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2"
walkdir = "2"
regex = "1"
clap = { version = "4.4", features = ["derive"]}
csv = "1.3"
#plotters = { version = "0.3.5"}
charts-rs = "0.3.5"
